feat(opportunities): init
