# back-end/src/models/statistic.model.ts
@@ -61,7 +61,8 @@ export enum StatisticEntityTypes {
   TOPICS = 'TOPICS',
   COMMUNICATIONS = 'COMMUNICATIONS',
   DEADLINES = 'DEADLINES',
-  USEFUL_LINKS = 'USEFUL_LINKS'
+  USEFUL_LINKS = 'USEFUL_LINKS',
+  OPPORTUNITIES = 'OPPORTUNITIES'
 }
 
 /**
